# micrograd-

./: .gitignore  CMakeLists.txt  README.md  micrograd++
include/: Engine.hpp  Operators.hpp
src/: main.cpp
